@@ -1,3 +1,8 @@
+Mon Nov 29 21:39:54 1993  Gray Watson  (gray@fridge.antaire.com)
+
+	* turned num_bits into a macro and condenced log_heap_map.  added
+	MAX_SLOTS to chunk.
+
 Tue Nov 23 02:39:44 1993  Gray Watson  (gray at toaster.antaire.com)
 
 	* fixed heap_check error with free blocks.
@@ -576,5 +581,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray at toaster)
 	when MALLOC_ADDRESS was not working correctly.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.78 1993/11/23 09:47:03 gray Exp $
+$Id: ChangeLog,v 1.79 1993/11/30 02:41:21 gray Exp $
 -------------------------------------------------------------------------------
